python-tuskarclient (0.1.3-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 17 Apr 2014 00:36:54 +0800

python-tuskarclient (0.1.1-3) experimental; urgency=low

  * Added BSD license of doc/source/_static/nature.css.

 -- Thomas Goirand <zigo@debian.org>  Wed, 19 Mar 2014 22:12:51 +0800

python-tuskarclient (0.1.1-2) experimental; urgency=low

  * Fixed install of the python module.

 -- Thomas Goirand <zigo@debian.org>  Sat, 15 Mar 2014 10:52:24 +0800

python-tuskarclient (0.1.1-1) experimental; urgency=low

  * Initial release (Closes: #732181)

 -- Thomas Goirand <zigo@debian.org>  Thu, 05 Dec 2013 15:53:48 +0800