@@ -21,9 +21,11 @@ Build-Depends-Indep: python-babel (>= 1.3),
                      python-stevedore (>= 0.12),
                      python-simplejson,
                      python-six (>=1.4.1),
+                     python-subunit (>= 0.0.18),
                      python-testtools (>= 0.9.32),
                      python-sphinx (>= 1.1.2),
                      python-sphinxcontrib-pecanwsme (>= 0.5),
+                     subunit (>= 0.0.18),
                      testrepository (>= 0.0.17)
 Standards-Version: 3.9.5
 Homepage: https://github.com/openstack/python-tuskarclient
