@@ -1,6 +1,7 @@
 python-tuskarclient (0.1.3-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Using testr and subunit correctly.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 17 Apr 2014 00:36:54 +0800
 
